tests/specs/ecosystem/radix_ui_fork/react_visually_hidden/0_0_6.test
radix-ui-fork/react-visually-hidden/0.0.6
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLSpanElement'.
const VisuallyHidden: React.ForwardRefExoticComponent<VisuallyHiddenProps & React.RefAttributes<HTMLSpanElement>> = {} as never;
                                                                                                ~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/VisuallyHidden.tsx:7:97

